# health-check

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: docker-config.yaml  example-config.yaml
src/: config.py  main.py
test-api/: Dockerfile  go.mod  main.go
