[project]
name = "health-checker"
version = "0.1.0"
description = "A simple async health check script"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.11.13",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
